# iris

./: .gitignore  AUTH_CONFIG.md  CLAUDE.md  README.md  iris-auth.db  pyproject.toml
.zed/: settings.json
deploy/: .env.example  .gitignore  README.md  docker-compose.yml  up.sh
deploy/clickhouse/init/: 01-iris-admin.sql
deploy/clickhouse/users.d/: iris-overlay.xml
deploy/keycloak/: realm.json
docs/: auth.md  clickhouse.md  frontend.md  operations.md  rust-migration.md
docs/superpowers/plans/: 2026-05-03-auth-security-followups.md  2026-05-03-auth.md  2026-05-03-roles-authz.md  2026-05-03-simplify-iris-codebase.md  2026-05-04-session-api-simplification.md  2026-05-05-auth-testcontainers.md  2026-05-05-clickhouse-authz.md  2026-05-06-auth-clickhouse-bridge.md  2026-05-06-authz-sqlite.md  2026-05-06-clickhouse-database-admin.md  2026-05-06-sqlite-session-store.md  2026-05-08-bootstrap-rework.md  2026-05-08-claude-md-refactor.md  2026-05-08-clickhouse-only-authz.md  2026-05-08-high-severity-fixes.md  2026-05-08-session-as-handle.md  2026-05-09-add-row-dict-policy.md  2026-05-09-add-row-policy-array-support.md  2026-05-09-auth-module-reshape.md  2026-05-09-authorization-render-direct-routes.md  2026-05-09-authorization-routes-typed-deps.md  2026-05-09-authorization-service-no-private-access.md  2026-05-09-clickhouse-integration-tests.md  2026-05-09-code-review-fixes.md  2026-05-09-frontend-architecture.md  2026-05-09-remove-grant-all-fallback.md  2026-05-09-security-hardening.md  2026-05-09-shell-static-and-template-flatten.md  2026-05-09-sql-hygiene.md  2026-05-09-typed-param-marshaller.md
docs/superpowers/specs/: 2026-05-03-auth-design.md  2026-05-03-roles-authz-design.md  2026-05-04-session-api-simplification-design.md  2026-05-05-auth-testcontainers-design.md  2026-05-05-clickhouse-authz-design.md  2026-05-06-auth-clickhouse-bridge-design.md  2026-05-06-authz-sqlite-design.md  2026-05-06-clickhouse-database-admin-design.md  2026-05-06-sqlite-session-store-design.md  2026-05-08-bootstrap-rework-design.md  2026-05-08-claude-md-refactor-design.md  2026-05-08-clickhouse-only-authz-design.md  2026-05-08-high-severity-fixes-design.md  2026-05-08-session-as-handle-design.md  2026-05-09-add-row-dict-policy-design.md  2026-05-09-add-row-policy-array-support-design.md  2026-05-09-auth-module-reshape-design.md  2026-05-09-authorization-render-direct-routes-design.md  2026-05-09-authorization-routes-typed-deps-design.md  2026-05-09-authorization-service-no-private-access-design.md  2026-05-09-clickhouse-integration-tests-design.md  2026-05-09-code-review-fixes-design.md  2026-05-09-frontend-architecture-design.md  2026-05-09-remove-grant-all-fallback-design.md  2026-05-09-security-hardening-design.md  2026-05-09-shell-static-and-template-flatten-design.md  2026-05-09-sql-hygiene-design.md  2026-05-09-typed-param-marshaller-design.md  2026-05-11-rag-ingestion-starter-stack-design.md  2026-05-11-rag-kg-extraction-and-resolution-design.md  2026-05-11-rag-phase-1-vector-rag-with-acl-design.md  2026-05-11-rag-phase-2-ingestion-design.md  2026-05-11-rag-phase-3-knowledge-graph-design.md  2026-05-11-rag-phase-4-stix-vocab-and-bootstrap-design.md  2026-05-11-rag-row-policy-acl-design.md  2026-05-11-rag-stix-bootstrap-loader-design.md  2026-05-11-rag-stix-vocab-extraction-design.md  2026-05-11-rag-synthesis-prompt-design.md
src/iris/: __init__.py  app.py  envtools.py  middleware.py  templates.py
src/iris/auth/: __init__.py  bootstrap.py  client_ip.py  config.py  csrf.py  deps.py  exceptions.py  identity.py  rate_limit.py  rights.py  routes.py  session.py  sessions.py  store.py  views.py
src/iris/clickhouse/: __init__.py  audit.py  bootstrap.py  capabilities.py  client.py  config.py  database_admins.py  deps.py  grants.py  handle.py  identifiers.py  install.py  policies.py  (+3 more)
tests/: conftest.py  test_app.py  test_conftest_helpers.py  test_security_headers.py  test_smoke.py  test_static_assets.py
tests/auth/: test_admin_inventory_methods.py  test_authorization_misconfigured.py  test_capabilities.py  test_client_ip.py  test_config.py  test_csrf.py  test_database_admin_dict_policies.py  test_database_admin_list_members.py  test_database_admin_row_policies.py  test_deps.py  test_error_pages.py  test_exception_handler.py  test_identity.py  test_login_method_not_allowed.py  test_login_mock.py  test_logout.py  test_post_login_hook.py  test_provider_ldap.py  test_provider_mock.py  test_provider_oauth.py  test_rate_limit.py  test_rights.py  test_session_dep.py  test_session_store.py  test_session_store_multiprocess.py
tests/clickhouse/: conftest.py  test_admin_handle.py  test_bootstrap_admin.py  test_capabilities_derivation.py  test_clickhouse_audit.py  test_clickhouse_bootstrap.py  test_clickhouse_deps.py  test_clickhouse_dict_policies.py  test_clickhouse_grants.py  test_clickhouse_identifiers.py  test_clickhouse_policies.py  test_clickhouse_settings.py  test_clickhouse_smoke.py  test_clickhouse_users.py  test_conftest_grants.py  test_creator_handle.py  test_database_admin_deps.py  test_database_admin_handle.py  test_database_admin_integration.py  test_database_admin_mutator.py  test_database_admin_store.py  test_database_creator_handle.py  test_dict_policy_name.py  test_handle.py  test_handle_integration.py  test_install.py  test_login_provisioning.py  test_query_marshaling.py  test_query_marshaling_integration.py  test_rights_derivation.py  test_tier_grants.py  test_tier_promotion.py  test_tier_roles.py
tests/features/: test_authorization_admin_console.py  test_authorization_audit.py  test_authorization_create_database.py  test_authorization_danger.py  test_authorization_install.py  test_authorization_manage.py  test_authorization_members.py  test_authorization_my_access.py  test_authorization_row_policies.py  test_authorization_smoke.py
tests/seed/: keycloak-realm.json
tests/shell/: test_contributions.py  test_element_id.py  test_intent_dispatch.py  test_nav_render.py  test_shell_home.py  test_shell_routes.py  test_tab_render_url.py  test_tabs_helpers.py  test_templates_loader.py
(+93 files in other folders)
