[project]
name = "iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrien Salais", email = "adrien.salais@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.15.1",
    "datastar-py>=1.0.0",
    "fastapi>=0.136.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "ldap3>=2.9.1",
    "pyjwt[crypto]>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "uvicorn>=0.46.0",
]

[project.scripts]
iris = "iris:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "testcontainers[clickhouse]>=4.14.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-ra"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.13"

# Disabled globally: these checks fire on intentional FastAPI/Pydantic patterns
# (route bodies discard return values, decorator-registered handlers look unused,
# Depends() defaults are calls, dict[str, Any] is the right shape for OIDC claims).
reportUnusedCallResult = false
reportUnusedFunction = false
reportCallInDefaultInitializer = false
reportAny = false
reportExplicitAny = false
reportUnannotatedClassAttribute = false
reportMissingTypeStubs = false           # datastar_py / ldap3 / etc. ship no stubs

# Tests: pytest fixtures are conventionally untyped; TestClient response objects
# expose dynamic attrs (status_code, headers, text, cookies). Forcing annotations
# everywhere costs churn for ~zero bug-finding value. White-box tests also poke
# at private helpers (_BindFailed, _open_connection, _clock_stream) by design.
[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnusedParameter = false             # pytest fixtures (e.g. monkeypatch) trigger setup
reportPrivateUsage = false
reportPrivateLocalImportUsage = false
