[project]
name = "iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrien Salais", email = "adrien.salais@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "clickhouse-connect>=0.15.1",
    "datastar-py>=1.0.0",
    "fastapi>=0.136.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "ldap3>=2.9.1",
    "pyjwt[crypto]>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "uvicorn>=0.46.0",
]

[project.scripts]
iris = "iris:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "testcontainers[clickhouse,keycloak]>=4.14.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-ra"]
# Treat deprecations as errors so we notice when our own code drifts onto
# deprecated APIs. The allow-list below covers known third-party deprecations
# we cannot fix in this repo (transitive lib code). Each entry should be
# revisited when we next bump the underlying dep.
filterwarnings = [
    "error::DeprecationWarning",
    # ldap3 imports `tagMap` / `typeMap` from pyasn1, which renamed them.
    # Fix lands when ldap3 publishes a release using TAG_MAP/TYPE_MAP.
    "default:.*(tagMap|typeMap) is deprecated.*:DeprecationWarning",
    # Some transitive dep still uses array.array('u', ...). Python 3.16 will
    # remove the `u` type code. Triggered at import time before our code runs.
    "default:.*'u' type code is deprecated.*:DeprecationWarning",
    # testcontainers' own clickhouse module uses its (now-deprecated)
    # @wait_container_is_ready decorator at import time. Internal to that lib;
    # fix lands when testcontainers-python migrates to LogMessageWaitStrategy.
    "default:.*@wait_container_is_ready decorator is deprecated.*:DeprecationWarning",
]

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = ["."]
pythonVersion = "3.13"

# Disabled globally: these checks fire on intentional FastAPI/Pydantic patterns
# (route bodies discard return values, decorator-registered handlers look unused,
# Depends() defaults are calls, dict[str, Any] is the right shape for OIDC claims).
reportUnusedCallResult = false
reportUnusedFunction = false
reportCallInDefaultInitializer = false
reportAny = false
reportExplicitAny = false
reportUnannotatedClassAttribute = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

# Tests: pytest fixtures are conventionally untyped; TestClient response objects
# expose dynamic attrs (status_code, headers, text, cookies). Forcing annotations
# everywhere costs churn for ~zero bug-finding value. White-box tests also poke
# at private helpers (_BindFailed, _open_connection, _clock_stream) by design.
[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnusedParameter = false             # pytest fixtures (e.g. monkeypatch) trigger setup
reportPrivateUsage = false
reportPrivateLocalImportUsage = false
